Further reduction in size

--- a/docs/write_up/JDM_mixed_fishery_letter.tex
+++ b/docs/write_up/JDM_mixed_fishery_letter.tex
@@ -10,7 +10,7 @@
 \usepackage[hyphens]{url} % for breaking url's in the bib
 \usepackage{amsmath}
 \usepackage{graphicx}
-\usepackage[]{changes}
+\usepackage[final]{changes}
 \definechangesauthor[color = red]{coilin}
 \definechangesauthor[color = blue]{Paul}
 \definechangesauthor[color = purple]{brutus}
@@ -41,7 +41,7 @@
 \end{affiliations}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{linenumbers}
+%\begin{linenumbers}
 
 \begin{abstract} 
 %% based on: https://www.nature.com/nature/authors/gta/2c_Summary_para.pdf
@@ -460,7 +460,7 @@ to predict. \deleted{For example,} Subtle differences in the distribution of
 cod, haddock and whiting can be seen in Figures 4a-c, showing spatial
 separation of catches is \deleted[id = brutus]{much more challenging and}
 likely to need to be supported by other measures such as changes to the
-selectivity characteristics of gear (e.g.\cite{Santos2016}). 
+selectivity characteristics of gear\cite{Santos2016}. 
 
 A role that science can play in supporting effectiveness of spatiotemporal
 avoidance could be in providing probabilistic advice on \deleted{likely}
@@ -735,7 +735,7 @@ insight into species co-occurrence and the strength of associations in space
 and time. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\end{linenumbers}
+%\end{linenumbers}
 \newpage
 \Urlmuskip=0mu plus 1mu\relax
 \bibliographystyle{naturemag}
