Fig 3 correlation values increased in size

--- a/docs/write_up/JDM_mixed_fishery_letter.tex
+++ b/docs/write_up/JDM_mixed_fishery_letter.tex
@@ -41,7 +41,7 @@
 \end{affiliations}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\begin{linenumbers}
+\begin{linenumbers}
 
 \begin{abstract} 
 %% based on: https://www.nature.com/nature/authors/gta/2c_Summary_para.pdf
@@ -735,7 +735,7 @@ insight into species co-occurrence and the strength of associations in space
 and time. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\end{linenumbers}
+\end{linenumbers}
 \newpage
 \Urlmuskip=0mu plus 1mu\relax
 \bibliographystyle{naturemag}
